force-app/main/default/objects/Lead_Status_Tracking__c/Lead_Status_Tracking__c.object-meta.xml
<CustomObject>
    <description>Records of this object track time spent in a given lead status. The records are created by automation.</description>
    <label>Lead Status Tracking</label>
    <nameField>
        <displayFormat>LST-{000000}</displayFormat>
        <label>Lead Status Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Status Tracking</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>