force-app/main/default/objects/Lead_Status_Tracking__c/fields/Elapsed_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Minutes__c</fullName>
    <formula>IF(ISBLANK(To_Status__c),  &quot;Current Status&quot;,
IF(FLOOR((To_Status_Timestamp__c - From_Status_Timestamp__c)*24*60)&gt;9,
TEXT(FLOOR((To_Status_Timestamp__c - From_Status_Timestamp__c)*24*60)),
&quot;0&quot; &amp; TEXT(FLOOR((To_Status_Timestamp__c - From_Status_Timestamp__c)*24*60))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time (Minutes)</label>
    <type>Text</type>
</CustomField>