force-app/main/default/objects/Lead_Status_Tracking__c/fields/From_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Status__c</fullName>
    <description>Previous lead status to track which status&apos; are leading to which other status&apos;
Auto Populated via flow LeadAutomation, read only on PL</description>
    <label>From Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>