force-app/main/default/objects/Lead_Status_Tracking__c/fields/From_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>From_Status_Timestamp__c</fullName>
    <description>timestamp used in formula on Lead Status Tracking to calculate the time in each status
auto populated by LeadAutomation Flow, read only on PL</description>
    <label>From Status Timestamp</label>
    <type>DateTime</type>
</CustomField>