force-app/main/default/objects/Lead_Status_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the lead record originating the status update
auto populated from LeadAutomation Flow, Read only on PL</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Status Tracking</relationshipLabel>
    <relationshipName>Lead_Status_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>