force-app/main/default/objects/Lead_Status_Tracking__c/fields/Open_Lead__c.field-meta.xml
<CustomField>
    <fullName>Open_Lead__c</fullName>
    <formula>IF(ISBLANK(To_Status__c),True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Lead</label>
    <type>Checkbox</type>
</CustomField>