force-app/main/default/objects/Lead_Status_Tracking__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>now() - 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>DateTime</type>
</CustomField>