force-app/main/default/objects/Lead_Status_Tracking__c/fields/Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Hours__c</fullName>
    <formula>IF(ISBLANK(To_Status__c), (NOW() - From_Status_Timestamp__c)*24 ,
FLOOR((To_Status_Timestamp__c - From_Status_Timestamp__c)*24)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>