force-app/main/default/objects/Lead_Status_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>From_Status__c</columns>
    <columns>From_Status_Timestamp__c</columns>
    <columns>To_Status__c</columns>
    <columns>To_Status_Timestamp__c</columns>
    <columns>Elapsed_Time_Hours__c</columns>
    <columns>Elapsed_Time_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>